--- a/views/index.ejs
+++ b/views/index.ejs
@@ -135,7 +135,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/public/script.js"></script>
+    <script src="./public/script.js"></script>
 </body>
 
 </html>
